	  fine for the moment but will break once we enable metadata updates.
	  For now just always using __set_page_dirty_nobuffers() for metadata
	  pages as nothing can dirty a page other than ourselves. Should this
	  change, we will really need to roll our own ->set_page_dirty().
	- Implement sops->dirty_inode() to implement {a,m,c}time updates and
	  such things.
	- Implement sops->write_inode().
	- In between ntfs_prepare/commit_write, need exclusion between
	  simultaneous file extensions. Need perhaps an NInoResizeUnderway()
	  flag which we can set in ntfs_prepare_write() and clear again in
	  ntfs_commit_write(). Just have to be careful in readpage/writepage,
	  as well as in truncate, that we play nice... We might need to have
	  a data_size field in the ntfs_inode to store the real attribute
	  length. Also need to be careful with initialized_size extention in
	  ntfs_prepare_write. Basically, just be _very_ careful in this code...
	  OTOH, perhaps i_sem, which is held accross generic_file_write is
	  sufficient for synchronisation here. We then just need to make sure
	  ntfs_readpage/writepage/truncate interoperate properly with us.
	- Implement mft.c::sync_mft_mirror_umount().  We currently will just
	  leave the volume dirty on umount if the final iput(vol->mft_ino)
	  causes a write of any mirrored mft records due to the mft mirror
	  inode having been discarded already.  Whether this can actually ever
	  happen is unclear however so it is worth waiting until someone hits
	  the problem.

2.1.13 - WIP.

	- Implement writing of mft records (fs/ntfs/mft.[hc]), which includes
	  keeping the mft mirror in sync with the mft when mirrored mft records
	  are written.  The functions are write_mft_record{,_nolock}().  The
	  implementation is quite rudimentary for now with lots of things not
	  implemented yet but I am not sure any of them can actually occur so
	  I will wait for people to hit each one and only then implement it.